[package]
name = "hmac-sha512"
version = "0.1.9"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "A small, self-contained SHA512, HMAC-SHA512, SHA384 and HMAC-SHA384 implementation"
keywords = ["crypto", "hash", "hmac", "sha2", "sha512"]
repository = "https://github.com/jedisct1/rust-hmac-sha512"
homepage = "https://github.com/jedisct1/rust-hmac-sha512"
categories = ["algorithms", "cryptography", "no-std"]
license-file = "LICENSE"

[dependencies]
digest = { version = "0.9", optional = true }

[features]
default = ["sha384"]
opt_size = []
traits = ["digest"]
sha384 = []

[profile.release]
lto = true
panic = "abort"
opt-level = 3
