[package]
name = "hmac-sha512"
version = "1.1.5"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "A small, self-contained SHA512, HMAC-SHA512, SHA384 and HMAC-SHA384 implementation"
keywords = ["crypto", "hash", "hmac", "sha2", "sha512"]
repository = "https://github.com/jedisct1/rust-hmac-sha512"
homepage = "https://github.com/jedisct1/rust-hmac-sha512"
categories = ["algorithms", "cryptography", "no-std"]
license = "ISC"

[dependencies]
digest09 = { package = "digest", version = "0.9.0", optional = true }
digest010 = { package = "digest", version = "0.10.4", features = ["oid"], optional = true }

[features]
default = ["sha384"]
opt_size = []
traits = ["traits09", "traits010"]
traits09 = ["digest09"]
traits010 = ["digest010"]
sha384 = []

[profile.release]
lto = true
panic = "abort"
opt-level = 3
