[package]
name = "hmac-sha512"
version = "1.1.12"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "A small, self-contained SHA512, HMAC-SHA512, HKDF-SHA512, SHA384, HMAC-SHA384, and HKDF-SHA384 implementation"
keywords = ["crypto", "hash", "hmac", "sha2", "sha512"]
repository = "https://github.com/jedisct1/rust-hmac-sha512"
homepage = "https://github.com/jedisct1/rust-hmac-sha512"
categories = ["algorithms", "cryptography", "no-std"]
license = "ISC"

[dependencies]
digest09 = { package = "digest", version = "0.9.0", optional = true }
digest010 = { package = "digest", version = "0.10.7", features = ["oid"], optional = true }
digest011 = { package = "digest", version = "0.11.0", features = ["oid"], optional = true }

[features]
default = ["sha384"]
opt_size = []
traits = ["traits09", "traits010", "traits011"]
traits09 = ["digest09"]
traits010 = ["digest010"]
traits011 = ["digest011"]
sha384 = []

[profile.release]
lto = true
panic = "abort"
opt-level = 3
